--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"><%= link_to 'Books', books_path, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to 'Authors', authors_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'About', about_path, class: 'nav-link' %></li> <!-- New About link -->
       </ul>
     </div>
   </nav>
